force-app/main/default/objects/Survey_Campaign_Profile__c/Survey_Campaign_Profile__c.object-meta.xml
<CustomObject>
    <label>Survey Campaign Profile</label>
    <nameField>
        <displayFormat>SCP-{00000}</displayFormat>
        <label>Survey Campaign Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Campaign Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>