force-app/main/default/objects/Survey_Campaign_Profile__c/fields/CampaignId__c.field-meta.xml
<CustomField>
    <fullName>CampaignId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Survey Campaign Profiles</relationshipLabel>
    <relationshipName>Survey_Campaign_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>