force-app/main/default/objects/Survey_Campaign_Profile__c/fields/campaignprofileid__c.field-meta.xml
<CustomField>
    <fullName>campaignprofileid__c</fullName>
    <externalId>true</externalId>
    <label>campaignprofileid</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>