force-app/main/default/objects/Survey_Campaign_Profile__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Survey Campaign Profiles</relationshipLabel>
    <relationshipName>Survey_Campaign_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>