force-app/main/default/objects/Survey_Campaign_Profile__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <formula>IF(
 Negative_Feedback__c &gt; 0, &quot;Negative&quot;,
IF(
 Positive_Feedback__c &gt; 0, &quot;Positive&quot;,
&quot;Neutral&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Feedback</label>
    <type>Text</type>
</CustomField>