force-app/main/default/objects/Survey_Campaign_Profile__c/fields/Last_Payload_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Payload_Date__c</fullName>
    <label>Last Payload Date</label>
    <type>Date</type>
</CustomField>