force-app/main/default/objects/Survey_Campaign_Profile__c/fields/Negative_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Negative_Feedback__c</fullName>
    <label>Negative Feedback</label>
    <summaryFilterItems>
        <field>Survey_Question__c.Negative__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Survey_Question__c.Survey_Campaign_Profile__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>