force-app/main/default/objects/Survey_Campaign_Profile__c/fields/Positive_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Positive_Feedback__c</fullName>
    <label>Positive Feedback</label>
    <summaryFilterItems>
        <field>Survey_Question__c.Positive__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey
  >Survey_Question__c.Survey_Campaign_Profile__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>